--- a/index.html
+++ b/index.html
@@ -30,11 +30,31 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div id = "hour09">
+
+      <div id = "hour09" class="hours">
         9:00
         <input type="text" id="input09">
         <button class="button">Save</button>
       </div>
+
+      <div id = "hour10" class="hours">
+        10:00
+        <input type="text" id="input10">
+        <button class="button">Save</button>
+      </div>
+
+      <div id = "hour11" class="hours">
+        11:00
+        <input type="text" id="input11">
+        <button class="button">Save</button>
+      </div>
+
+      <div id = "hour22" class="hours">
+        22:00
+        <input type="text" id="input12">
+        <button class="button">Save</button>
+      </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
