--- a/index.html
+++ b/index.html
@@ -31,28 +31,70 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <div id = "hour09" class="hours">
-        9:00
-        <input type="text" id="input09">
-        <button class="button">Save</button>
+      <div id = "hour08" class="row hour">
+        08:00
+        <input type="text" id="input08">
+        <button class="saveBtn">Save</button>
       </div>
 
-      <div id = "hour10" class="hours">
+      <div id = "hour09" class="row hour">
+        09:00
+        <input type="text" id="input09">
+        <button class="saveBtn">Save</button>
+      </div>
+
+      <div id = "hour10" class="row hour">
         10:00
         <input type="text" id="input10">
-        <button class="button">Save</button>
+        <button class="saveBtn">Save</button>
       </div>
 
-      <div id = "hour11" class="hours">
+      <div id = "hour11" class="row hour">
         11:00
         <input type="text" id="input11">
-        <button class="button">Save</button>
+        <button class="saveBtn">Save</button>
       </div>
 
-      <div id = "hour22" class="hours">
-        22:00
+      <div id = "hour12" class="row hour">
+        12:00
         <input type="text" id="input12">
-        <button class="button">Save</button>
+        <button class="saveBtn">Save</button>
+      </div>
+
+      <div id = "hour13" class="row hour">
+        13:00
+        <input type="text" id="input13">
+        <button class="saveBtn">Save</button>
+      </div>
+
+      <div id = "hour14" class="row hour">
+        14:00
+        <input type="text" id="input14">
+        <button class="saveBtn">Save</button>
+      </div>
+
+      <div id = "hour15" class="row hour">
+        15:00
+        <input type="text" id="input15">
+        <button class="saveBtn">Save</button>
+      </div>
+
+      <div id = "hour16" class="row hour">
+        16:00
+        <input type="text" id="input16">
+        <button class="saveBtn">Save</button>
+      </div>
+
+      <div id = "hour17" class="row hour">
+        17:00
+        <input type="text" id="input17">
+        <button class="saveBtn">Save</button>
+      </div>
+
+      <div id = "hour18" class="row hour">
+        18:00
+        <input type="text" id="input18">
+        <button class="saveBtn">Save</button>
       </div>
 
     </div>
